--- a/7/css/style.css
+++ b/7/css/style.css
@@ -1403,3 +1403,19 @@ main {
 .hidden {
   display: none;
 }
+
+.text__error {
+  color: red;
+}
+
+.text--invalid input {
+  outline: 2px solid red;
+}
+
+.text--valid input {
+  outline: none;
+}
+
+.text--invalid + .img-upload__submit {
+  pointer-events: none;
+}
